--- a/src/app/core/modallaptop/modal.component.html
+++ b/src/app/core/modallaptop/modal.component.html
@@ -66,9 +66,9 @@
         <mat-form-field>
           <mat-label>Condition</mat-label>
           <mat-select id="laptopCondition" formControlName="laptopCondition" >
-            <mat-option value="employee">Brand New</mat-option>
-            <mat-option value="employee">Used</mat-option>
-            <mat-option value="employee">Unavailable</mat-option>
+            <mat-option value="Brand New">Brand New</mat-option>
+            <mat-option value="Used">Used</mat-option>
+            <mat-option value="Unavailable">Unavailable</mat-option>
           </mat-select>
         </mat-form-field>
         
