--- a/src/app/features/dashboard/dashboard.component.css
+++ b/src/app/features/dashboard/dashboard.component.css
@@ -44,8 +44,8 @@
   justify-content: center;
   background-color: #4a4a4a;
   color: white;
-  width: 12rem;
-  height: 12rem;
+  width: 13em;
+  height: 13rem;
   border-radius: 10px;
   text-align: center;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
