--- a/src/app/features/usermanagement/usermanagement.component.html
+++ b/src/app/features/usermanagement/usermanagement.component.html
@@ -30,11 +30,12 @@
           </div>
         </div>
         <div class="table-container">
+
           <table mat-table class="mat-elevation-z8" [dataSource]="employees">
-            <ng-container matColumnDef="employee">
+            <ng-container matColumnDef="employeeName">
               <th mat-header-cell *matHeaderCellDef>Employee</th>
               <td mat-cell *matCellDef="let employee">
-                {{ employee.employee }}
+                {{ employee.employeeName }}
               </td>
             </ng-container>
 
@@ -45,40 +46,13 @@
               </td>
             </ng-container>
 
-            <ng-container matColumnDef="email">
-              <th mat-header-cell *matHeaderCellDef>Email</th>
+            <ng-container matColumnDef="employmentPeriod">
+              <th mat-header-cell *matHeaderCellDef>Employment Period</th>
               <td mat-cell *matCellDef="let employee">
-                {{ employee.email }}
+                {{ employee.employmentPeriod }}
               </td>
             </ng-container>
 
-            <ng-container matColumnDef="contact">
-              <th mat-header-cell *matHeaderCellDef>Contact</th>
-              <td mat-cell *matCellDef="let employee">
-                {{ employee.contact }}
-              </td>
-            </ng-container>
-
-            <ng-container matColumnDef="position">
-              <th mat-header-cell *matHeaderCellDef>Position</th>
-              <td mat-cell *matCellDef="let employee">
-                {{ employee.position }}
-              </td>
-            </ng-container>
-
-            <ng-container matColumnDef="address">
-              <th mat-header-cell *matHeaderCellDef>Address</th>
-              <td mat-cell *matCellDef="let employee">
-                {{ employee.address }}
-              </td>
-            </ng-container>
-
-            <ng-container matColumnDef="teamcolor">
-              <th mat-header-cell *matHeaderCellDef>Team Color</th>
-              <td mat-cell *matCellDef="let employee">
-                {{ employee.teamcolor }}
-              </td>
-            </ng-container>
 
             <ng-container matColumnDef="actions">
               <th mat-header-cell *matHeaderCellDef>Actions</th>
