--- a/src/app/core/addemp/addemp.component.html
+++ b/src/app/core/addemp/addemp.component.html
@@ -23,7 +23,7 @@
           <mat-form-field>
             <mat-label>Employment Date</mat-label>
             <input matInput [matDatepicker]="picker"
-            title="PD" id="EmploymentDate" formControlName="EmploymentDate"
+            title="PD" id="EmploymentDate" formControlName="employmentDate"
             />
             <mat-hint>MM/DD/YYYY</mat-hint>
             <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
