--- a/src/app/features/server/server.component.html
+++ b/src/app/features/server/server.component.html
@@ -1,1 +1,88 @@
-<p>server works!</p>
+<main id="main-content">
+    <section class="table-add-server">
+        <div class="parent-container">
+            <div class="dashboard-card">
+                <div class="toolbar">
+                    <button id="open-modal" class="add-button" (click)="openModal()">
+                        <mat-icon aria-hidden="false" aria-label="Add Server" fontIcon="add_circle"></mat-icon>
+                        <p>Add New Server</p>
+                    </button>
+                    <div class="search-container">
+                        <input matInput type="text" placeholder="Search Servers..." class="search-input"
+                            [(ngModel)]="searchKeyword" />
+                        <button class="search-btn" (click)="onSearch()">
+                            <mat-icon class="search-btn" aria-hidden="false" aria-label="Search Icon"
+                                fontIcon="search"></mat-icon>
+                        </button>
+                    </div>
+                </div>
+                <div class="table-container">
+                    <table mat-table class="mat-elevation-z8" [dataSource]="servers">
+
+                        <!-- Server Serial Number -->
+                        <ng-container matColumnDef="serverSerialNumber">
+                            <th mat-header-cell *matHeaderCellDef>Serial Number</th>
+                            <td mat-cell *matCellDef="let server">
+                                {{ server.serverSerialNumber }}
+                            </td>
+                        </ng-container>
+
+                        <!-- Purchase Date -->
+                        <ng-container matColumnDef="serverPurchaseDate">
+                            <th mat-header-cell *matHeaderCellDef>Purchase Date</th>
+                            <td mat-cell *matCellDef="let server">
+                                {{ server.serverPurchaseDate | date:'MM/dd/yyyy' }}
+                            </td>
+                        </ng-container>
+
+                        <!-- Data Center / Location -->
+                        <ng-container matColumnDef="serverLocation">
+                            <th mat-header-cell *matHeaderCellDef>Location</th>
+                            <td mat-cell *matCellDef="let server">
+                                {{ server.serverLocation }}
+                            </td>
+                        </ng-container>
+
+                        <!-- Assigned Technician / Administrator -->
+                        <ng-container matColumnDef="assignedAdmin">
+                            <th mat-header-cell *matHeaderCellDef>Assigned Administrator</th>
+                            <td mat-cell *matCellDef="let server">
+                                {{ server.assignedAdmin }}
+                            </td>
+                        </ng-container>
+
+                        <!-- Server Status -->
+                        <ng-container matColumnDef="serverStatus">
+                            <th mat-header-cell *matHeaderCellDef>Status</th>
+                            <td mat-cell *matCellDef="let server">
+                                {{ server.serverStatus }}
+                            </td>
+                        </ng-container>
+
+                        <!-- Server Actions -->
+                        <ng-container matColumnDef="actions">
+                            <th mat-header-cell *matHeaderCellDef>Actions</th>
+                            <td mat-cell *matCellDef="let server">
+                                <button mat-button color="primary" (click)="openEditModal(server)">
+                                    Edit
+                                </button>
+                                <button mat-button color="warn" (click)="openDeleteModal(server)">
+                                    Delete
+                                </button>
+                            </td>
+                        </ng-container>
+
+                        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <app-modal-server *ngIf="isModalOpen" (closeModalEvent)="closeModal()"></app-modal-server>
+    <app-updates *ngIf="isEditModalOpen" (closeModalEvent)="closeEditModal()"></app-updates>
+    <app-delete *ngIf="isDeleteModalOpen" (closeModalEvent)="closeDeleteModal()"></app-delete>
+
+
+</main>
