--- a/src/app/core/modaldesktop/modaldesktop.component.html
+++ b/src/app/core/modaldesktop/modaldesktop.component.html
@@ -1,94 +1,69 @@
 <div class="modal" *ngIf="isModalOpen">
-    <div class="modal-content">
-      <span class="close-btn" (click)="closeModal()">×</span>
-      <h2>Desktop Detials</h2>
-      <form [formGroup]="editDesktopForm" (ngSubmit)="onSubmit()">
-  
-        <div class="form-grid">
-          <mat-form-field>
-            <mat-label>Device Name</mat-label>
-            <input title="device" matInput>
-          </mat-form-field>
-  
-          <mat-form-field>
-            <mat-label>Serial Number</mat-label>
-            <input title="serial" matInput>
-          </mat-form-field>
-  
-          <mat-form-field>
-            <mat-label>Description</mat-label>
-            <input title="description" matInput>
-          </mat-form-field>
-  
-          <mat-form-field>
-            <mat-label>Purchase Date</mat-label>
-            <input title="Purchase" matInput [matDatepicker]="picker">
-            <mat-hint>MM/DD/YYYY</mat-hint>
-            <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
-            <mat-datepicker #picker panelClass="small-datepicker"></mat-datepicker>
-          </mat-form-field>
-          
-          <mat-form-field>
-            <mat-label>Location</mat-label>
-            <mat-select>
-              <mat-option value="employee">1NK Center</mat-option>
-              <mat-option value="employee">New Office</mat-option>
-              <mat-option value="employee">Warehouse</mat-option>
-            </mat-select>
-          </mat-form-field>
-  
-          <mat-form-field>
-            <mat-label>Assigned Personnel</mat-label>
-            <mat-select>
-              <mat-option value="employee">Kim Carl Buban</mat-option>
-              <mat-option value="employee">Jhomark Alber</mat-option>
-            </mat-select>
-          </mat-form-field>
-  
-          <mat-form-field>
-            <mat-label>Condition</mat-label>
-            <mat-select>
-              <mat-option value="employee">Brand New</mat-option>
-              <mat-option value="employee">Used</mat-option>
-            </mat-select>
-          </mat-form-field>
-          
-        </div>
-        
-        <div class="button-group">
-          <button type="button" class="cancel-btn" (click)="closeModal()">
-            Cancel
-          </button>
-          <button type="submit" [disabled]="editDesktopForm.invalid">Add</button>
-        </div>
-      </form>
-    </div>
-  </div>
-  
-  <!-- <div class="modal" *ngIf="isAddEmployeeOpen">
-    <div class="modal-content">
-      <h2>Add Employee</h2>
-      <form >
-        <div class="form-group">
-          <label for="employeeName">Employee Name</label>
-          <input
-            id="employeeName"
-            [(ngModel)]="newEmployee"
-            placeholder="Enter Employee Name"
-            name="employeeName"
-            required
-          />
-        </div>
-        <div class="button-group">
-          <button
-            type="button"
-            class="cancel-btn"
-            (click)="closeAddEmployeeModal()"
+  <div class="modal-content">
+    <span class="close-btn" (click)="closeModal()">×</span>
+    <h2>Desktop Detials</h2>
+    <form [formGroup]="editDesktopForm" (ngSubmit)="onSubmit()">
+
+      <div class="form-grid">
+
+        <mat-form-field>
+          <mat-label>Serial Number</mat-label>
+          <input matInput
+          title="desktop-Serial-Number"
+          id="desktopSerialNumber"
+          formControlName="desktopSerialNumber"
+          placeholder="Enter Desktop Serial"
           >
-            Cancel
-          </button>
-          <button type="submit">Save</button>
-        </div>
-      </form>
-    </div>
-  </div> -->
+        </mat-form-field>
+
+        <mat-form-field>
+          <mat-label>Purchase Date</mat-label>
+          <input matInput [matDatepicker]="picker"
+          title="desktop-PD"
+          id="desktopPurchaseDate"
+          formControlName="desktopPurchaseDate"
+          placeholder="MM/DD/YYYY">
+          <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+          <mat-datepicker #picker panelClass="small-datepicker"></mat-datepicker>
+        </mat-form-field>
+        
+        <mat-form-field>
+          <mat-label>Location</mat-label>
+          <mat-select>
+            <mat-option value="desktop">1NK Center</mat-option>
+            <mat-option value="desktop">New Office</mat-option>
+            <mat-option value="desktop">Warehouse</mat-option>
+          </mat-select>
+        </mat-form-field>
+      
+        <mat-form-field>
+          <mat-label>Assigned Personnel</mat-label>
+          <mat-select id="assignedTo" formControlName="assignedTo">
+            <mat-option *ngFor="let employee of employees" [value]="employee._id">
+              {{ employee.employeeName }}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+
+        <mat-form-field>
+          <mat-label>Condition</mat-label>
+          <mat-select id="laptopCondition" formControlName="laptopCondition" >
+            <mat-option value="Brand New">Brand New</mat-option>
+            <mat-option value="Used">Used</mat-option>
+            <mat-option value="Unavailable">Unavailable</mat-option>
+          </mat-select>
+        </mat-form-field>
+
+
+      </div>
+
+      <div class="button-group">
+        <button type="button" class="cancel-btn" (click)="closeModal()">
+          Cancel
+        </button>
+        <button type="submit" [disabled]="editDesktopForm.invalid">Add</button>
+      </div>
+    </form>
+  </div>
+</div>
+
