--- a/src/app/core/modallaptop/modal.component.html
+++ b/src/app/core/modallaptop/modal.component.html
@@ -78,36 +78,8 @@
         <button type="button" class="cancel-btn" (click)="closeModal()">
           Cancel
         </button>
-        <button type="submit" [disabled]="editLaptopForm?.invalid">Add</button>
+        <button type="submit" [disabled]="editLaptopForm.invalid">Add</button>
       </div>
     </form>
   </div>
 </div>
-
-<!-- <div class="modal" *ngIf="isAddEmployeeOpen">
-  <div class="modal-content">
-    <h2>Add Employee</h2>
-    <form >
-      <div class="form-group">
-        <label for="employeeName">Employee Name</label>
-        <input
-          id="employeeName"
-          [(ngModel)]="newEmployee"
-          placeholder="Enter Employee Name"
-          name="employeeName"
-          required
-        />
-      </div>
-      <div class="button-group">
-        <button
-          type="button"
-          class="cancel-btn"
-          (click)="closeAddEmployeeModal()"
-        >
-          Cancel
-        </button>
-        <button type="submit">Save</button>
-      </div>
-    </form>
-  </div>
-</div> -->
