--- a/src/app/features/usermanagement/usermanagement.component.html
+++ b/src/app/features/usermanagement/usermanagement.component.html
@@ -32,27 +32,55 @@
         <div class="table-container">
 
           <table mat-table class="mat-elevation-z8" [dataSource]="employees">
+
             <ng-container matColumnDef="employeeName">
-              <th mat-header-cell *matHeaderCellDef>Employee</th>
+              <th mat-header-cell *matHeaderCellDef>Employee Name</th>
               <td mat-cell *matCellDef="let employee">
                 {{ employee.employeeName }}
+              </td>
+            </ng-container>
+
+            <ng-container matColumnDef="employeeEmail">
+              <th mat-header-cell *matHeaderCellDef>Employee Email</th>
+              <td mat-cell *matCellDef="let employee">
+                {{ employee.employeeEmail }}
               </td>
             </ng-container>
 
             <ng-container matColumnDef="employmentDate">
               <th mat-header-cell *matHeaderCellDef>Employment Date</th>
               <td mat-cell *matCellDef="let employee">
-                {{ employee.employmentDate | date : "mediumDate" }}
+                {{ employee.employmentDate }}
               </td>
             </ng-container>
 
-            <ng-container matColumnDef="employmentPeriod">
-              <th mat-header-cell *matHeaderCellDef>Employment Period</th>
+            <ng-container matColumnDef="employeeContact">
+              <th mat-header-cell *matHeaderCellDef>Employee Contact</th>
               <td mat-cell *matCellDef="let employee">
-                {{ employee.employmentPeriod }}
+                {{ employee.employeeContact }}
               </td>
             </ng-container>
 
+            <ng-container matColumnDef="employeePosition">
+              <th mat-header-cell *matHeaderCellDef>Employee Position</th>
+              <td mat-cell *matCellDef="let employee">
+                {{ employee.employeePosition }}
+              </td>
+            </ng-container>
+
+            <ng-container matColumnDef="employeeAddress">
+              <th mat-header-cell *matHeaderCellDef>Employee Address</th>
+              <td mat-cell *matCellDef="let employee">
+                {{ employee.employeeAddress }}
+              </td>
+            </ng-container>
+
+            <ng-container matColumnDef="TeamColor">
+              <th mat-header-cell *matHeaderCellDef>Team Color</th>
+              <td mat-cell *matCellDef="let employee">
+                {{ employee.TeamColor }}
+              </td>
+            </ng-container>
 
             <ng-container matColumnDef="actions">
               <th mat-header-cell *matHeaderCellDef>Actions</th>
