--- a/src/app/features/desktop/desktop.component.html
+++ b/src/app/features/desktop/desktop.component.html
@@ -57,10 +57,10 @@
             </ng-container>
         
             <!-- Assigned Personnel -->
-            <ng-container matColumnDef="assignedTo">
+            <ng-container matColumnDef="desktopassignedTo">
               <th mat-header-cell *matHeaderCellDef>Assigned Personnel</th>
               <td mat-cell *matCellDef="let desktop">
-                {{ desktop.assignedTo }}
+                {{ desktop.desktopassignedTo }}
               </td>
             </ng-container>
         
