--- a/src/app/core/addemp/addemp.component.html
+++ b/src/app/core/addemp/addemp.component.html
@@ -2,8 +2,8 @@
     <div class="modal-content">
       <span class="close-btn" (click)="closeModal()">×</span>
       <h2>Add Employee</h2>
+      
       <form [formGroup]="editEmployeeForm" (ngSubmit)="onSubmit()">
-
         <div class="form-grid">
 
           <mat-form-field>
@@ -14,48 +14,15 @@
           </mat-form-field>
 
           <mat-form-field>
-            <mat-label>Email</mat-label>
-            <input matInput 
-            id="employeeEmail" formControlName="employeeEmail" placeholder="Enter Email"
-            />
-          </mat-form-field>
-
-          <mat-form-field>
             <mat-label>Employment Date</mat-label>
             <input matInput [matDatepicker]="picker"
-            title="PD" id="EmploymentDate" formControlName="employmentDate"
+            title="PD" id="employmentDate" formControlName="employmentDate"
+            placeholder="MM/DD/YYYY"
             />
-            <mat-hint>MM/DD/YYYY</mat-hint>
             <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
             <mat-datepicker #picker panelClass="small-datepicker"></mat-datepicker>
           </mat-form-field>
           
-          <mat-form-field>
-            <mat-label>Contact</mat-label>
-            <input title="contact" matInput />          
-          </mat-form-field>
-          
-          <mat-form-field>
-            <mat-label>Position</mat-label>
-            <mat-select>
-              <mat-option value="employee">Secured Front-End Developer</mat-option>
-              <mat-option value="employee">Back-End Developer</mat-option>
-            </mat-select>
-          </mat-form-field>
-
-          <mat-form-field>
-            <mat-label>Address</mat-label>
-            <input  title="laptopAddress" matInput>
-          </mat-form-field>
-
-          <mat-form-field>
-            <mat-label>Team Color</mat-label>
-            <mat-select>
-              <mat-option value="employee">Green Team</mat-option>
-              <mat-option value="employee">Red Team</mat-option>
-              <mat-option value="employee">White Team</mat-option>
-            </mat-select>
-          </mat-form-field>
 
   
         </div>
