--- a/src/app/features/laptop/laptop.component.html
+++ b/src/app/features/laptop/laptop.component.html
@@ -52,10 +52,10 @@
               </td>
             </ng-container>
 
-            <ng-container matColumnDef="assignedTo">
+            <ng-container matColumnDef="laptopAssignedTo">
               <th mat-header-cell *matHeaderCellDef>Assigned To</th>
               <td mat-cell *matCellDef="let laptop">
-                {{ getEmployeeName(laptop.assignedTo) }}
+                {{ getEmployeeName(laptop.laptopAssignedTo) }}
               </td>
             </ng-container>
 
@@ -68,18 +68,20 @@
 
             <ng-container matColumnDef="actions">
               <th mat-header-cell *matHeaderCellDef>Actions</th>
-              <td mat-cell *matCellDef="let laptop">
-                <button mat-button color="primary" (click)="openEditModal(laptop)">
-                  Edit
+              <td mat-cell *matCellDef="let laptop" class="actionbtn">
+                <button class="actionbtn" mat-button (click)="openEditModal(laptop)">
+                  <mat-icon class="custom-info-icon">info</mat-icon>
                 </button>
-                <button mat-button color="primary" (click)="openDeleteModal(laptop)">
-                  Delete
+                <button class="actionbtn" mat-button color="primary" (click)="openEditModal(laptop)">
+                  <mat-icon class="material-symbols-outlined">edit</mat-icon>
+                </button>
+                <button class="actionbtn" mat-button color="primary" (click)="openDeleteModal(laptop)">
+                  <mat-icon class="material-symbols-outlined">delete</mat-icon>
                 </button>
               </td>
             </ng-container>
 
-            <mat-paginator 
-            [length]="100" [pageSize]="10" [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page">
+            <mat-paginator [length]="100" [pageSize]="10" [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page">
             </mat-paginator>
 
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
