--- a/src/app/features/usermanagement/usermanagement.component.html
+++ b/src/app/features/usermanagement/usermanagement.component.html
@@ -31,7 +31,7 @@
         </div>
         <div class="table-container">
 
-          <table mat-table class="mat-elevation-z8" [dataSource]="employees">
+          <table mat-table class="mat-elevation-z8" [dataSource]="dataSource">
 
             <ng-container matColumnDef="employeeName">
               <th mat-header-cell *matHeaderCellDef>Employee Name</th>
@@ -40,62 +40,34 @@
               </td>
             </ng-container>
 
-            <ng-container matColumnDef="employeeEmail">
-              <th mat-header-cell *matHeaderCellDef>Employee Email</th>
-              <td mat-cell *matCellDef="let employee">
-                {{ employee.employeeEmail }}
-              </td>
-            </ng-container>
-
             <ng-container matColumnDef="employmentDate">
               <th mat-header-cell *matHeaderCellDef>Employment Date</th>
               <td mat-cell *matCellDef="let employee">
-                {{ employee.employmentDate }}
+                {{ employee.employmentDate | date: 'MMMM d, y' }}
               </td>
             </ng-container>
-
-            <ng-container matColumnDef="employeeContact">
-              <th mat-header-cell *matHeaderCellDef>Employee Contact</th>
+            
+            <ng-container matColumnDef="employmentPeriod">
+              <th mat-header-cell *matHeaderCellDef>Employment Period</th>
               <td mat-cell *matCellDef="let employee">
-                {{ employee.employeeContact }}
-              </td>
-            </ng-container>
-
-            <ng-container matColumnDef="employeePosition">
-              <th mat-header-cell *matHeaderCellDef>Employee Position</th>
-              <td mat-cell *matCellDef="let employee">
-                {{ employee.employeePosition }}
-              </td>
-            </ng-container>
-
-            <ng-container matColumnDef="employeeAddress">
-              <th mat-header-cell *matHeaderCellDef>Employee Address</th>
-              <td mat-cell *matCellDef="let employee">
-                {{ employee.employeeAddress }}
-              </td>
-            </ng-container>
-
-            <ng-container matColumnDef="TeamColor">
-              <th mat-header-cell *matHeaderCellDef>Team Color</th>
-              <td mat-cell *matCellDef="let employee">
-                {{ employee.TeamColor }}
+                {{ employee.employmentPeriod }}
               </td>
             </ng-container>
 
             <ng-container matColumnDef="actions">
               <th mat-header-cell *matHeaderCellDef>Actions</th>
-              <td mat-cell *matCellDef="let employees">
+              <td mat-cell *matCellDef="let employee">
                 <button
                   mat-button
                   color="primary"
-                  (click)="openeditempModal(employees)"
+                  (click)="openeditempModal(employee)"
                 >
                   Edit
                 </button>
                 <button
                   mat-button
                   color="primary"
-                  (click)="openDeleteEmpModal(employees)"
+                  (click)="openDeleteEmpModal(employee)"
                 >
                   Delete
                 </button>
