--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -47,7 +47,7 @@
       </mat-expansion-panel>
 
       <a mat-list-item routerLink="/main/user-management"
-        ><mat-icon>home</mat-icon> <strong>Employee</strong></a
+        ><mat-icon>badge</mat-icon> <strong>Employees</strong></a
       >
       <a mat-list-item routerLink="/login"
         ><mat-icon>logout</mat-icon> <strong>Logout</strong></a
