--- a/src/app/features/server/server.component.html
+++ b/src/app/features/server/server.component.html
@@ -66,8 +66,8 @@
                                 <button mat-button color="primary" (click)="openEditModal(server)">
                                     Edit
                                 </button>
-                                <button mat-button color="warn" (click)="openDeleteModal(server)">
-                                    Delete
+                                <button class="actionbtn" mat-button color="primary" (click)="openDeleteModal(server)">
+                                    <mat-icon class="material-symbols-outlined">delete</mat-icon>
                                 </button>
                             </td>
                         </ng-container>
