--- a/src/app/features/usermanagement/usermanagement.component.html
+++ b/src/app/features/usermanagement/usermanagement.component.html
@@ -4,28 +4,14 @@
       <div class="dashboard-card">
         <div class="toolbar">
           <button id="open-modal" class="add-button" (click)="openModal()">
-            <mat-icon
-              aria-hidden="false"
-              aria-label="Example home icon"
-              fontIcon="add_circle"
-            ></mat-icon>
+            <mat-icon aria-hidden="false" aria-label="Example home icon" fontIcon="add_circle"></mat-icon>
             <p>Add Employee</p>
           </button>
           <div class="search-container">
-            <input
-              matInput
-              type="text"
-              placeholder="Search..."
-              class="search-input"
-              [(ngModel)]="searchKeyword"
-            />
+            <input matInput type="text" placeholder="Search..." class="search-input" [(ngModel)]="searchKeyword" />
             <button class="search-btn" (click)="onSearch()">
-              <mat-icon
-                class="search-btn"
-                aria-hidden="false"
-                aria-label="Example home icon"
-                fontIcon="search"
-              ></mat-icon>
+              <mat-icon class="search-btn" aria-hidden="false" aria-label="Example home icon"
+                fontIcon="search"></mat-icon>
             </button>
           </div>
         </div>
@@ -46,7 +32,7 @@
                 {{ employee.employmentDate | date: 'MMMM d, y' }}
               </td>
             </ng-container>
-            
+
             <ng-container matColumnDef="employmentPeriod">
               <th mat-header-cell *matHeaderCellDef>Employment Period</th>
               <td mat-cell *matCellDef="let employee">
@@ -56,20 +42,16 @@
 
             <ng-container matColumnDef="actions">
               <th mat-header-cell *matHeaderCellDef>Actions</th>
-              <td mat-cell *matCellDef="let employee">
-                <button
-                  mat-button
-                  color="primary"
-                  (click)="openeditempModal(employee)"
-                >
-                  Edit
+              <td mat-cell *matCellDef="let employee" class="actionbtn">
+
+                <button class="actionbtn" mat-button color="primary" (click)="openeditempModal(employee)">
+                  <mat-icon class="custom-info-icon">info</mat-icon>
                 </button>
-                <button
-                  mat-button
-                  color="primary"
-                  (click)="openDeleteEmpModal(employee)"
-                >
-                  Delete
+                <button class="actionbtn" mat-button color="primary" (click)="openeditempModal(employee)">
+                  <mat-icon class="material-symbols-outlined">edit</mat-icon>
+                </button>
+                <button class="actionbtn" mat-button color="primary" (click)="openDeleteEmpModal(employee)">
+                  <mat-icon class="material-symbols-outlined">delete</mat-icon>
                 </button>
               </td>
             </ng-container>
@@ -80,14 +62,8 @@
         </div>
       </div>
     </div>
-  </section> 
+  </section>
   <app-addemp *ngIf="isModalOpen" (closeModalEvent)="closeModal()"></app-addemp>
-  <app-updatesemp
-    *ngIf="iseditempModalOpen"
-    (closeModalEvent)="iseditempModalOpen = false"
-></app-updatesemp>
-  <app-deleteemp  
-    *ngIf="isDeleteModalOpen"
-    (closeModalEvent)="isDeleteModalOpen = false"
-  ></app-deleteemp>
+  <app-updatesemp *ngIf="iseditempModalOpen" (closeModalEvent)="iseditempModalOpen = false"></app-updatesemp>
+  <app-deleteemp *ngIf="isDeleteModalOpen" (closeModalEvent)="isDeleteModalOpen = false"></app-deleteemp>
 </main>
