--- a/src/app/core/addemp/addemp.component.html
+++ b/src/app/core/addemp/addemp.component.html
@@ -9,8 +9,7 @@
           <mat-form-field>
             <mat-label>Employee Name</mat-label>
             <input matInput
-            id="employeeName" formControlName="employeeName" placeholder="Enter Employee Name" 
-            />
+            id="employeeName" formControlName="employeeName" placeholder="Enter Employee Name" />
           </mat-form-field>
 
           <mat-form-field>
