--- a/src/app/core/modaldesktop/modaldesktop.component.html
+++ b/src/app/core/modaldesktop/modaldesktop.component.html
@@ -1,10 +1,18 @@
 <div class="modal" *ngIf="isModalOpen">
   <div class="modal-content">
     <span class="close-btn" (click)="closeModal()">×</span>
-    <h2>Desktop Detials</h2>
+    <h2>Desktop Details</h2>
     <form [formGroup]="editDesktopForm" (ngSubmit)="onSubmit()">
 
       <div class="form-grid">
+        <mat-form-field>
+          <mat-label>Device Name</mat-label>
+          <input matInput
+          title="desktop-device"
+          id="desktopName" 
+          formControlName="desktopName" 
+          placeholder="Enter Device Name">
+        </mat-form-field>
 
         <mat-form-field>
           <mat-label>Serial Number</mat-label>
@@ -12,7 +20,47 @@
           title="desktop-Serial-Number"
           id="desktopSerialNumber"
           formControlName="desktopSerialNumber"
-          placeholder="Enter Desktop Serial"
+          placeholder="Enter Device Serial"
+          >
+        </mat-form-field>
+
+        <mat-form-field>
+          <mat-label>Model</mat-label>
+          <input matInput
+          title="desktop-description"
+          id="desktopModel"
+          formControlName="desktopModel"
+          placeholder="Enter Desktop Model"
+          >
+        </mat-form-field>
+
+        <mat-form-field>
+          <mat-label>Processor</mat-label>
+          <input matInput
+          title="desktop-processor"
+          id="desktopProcessor"
+          formControlName="desktopProcessor"
+          placeholder="Enter Desktop Processor"
+          >
+        </mat-form-field>
+
+        <mat-form-field>
+          <mat-label>RAM</mat-label>
+          <input matInput
+          title="desktop-ram"
+          id="desktopRam"
+          formControlName="desktopRam"
+          placeholder="Enter Desktop RAM"
+          >
+        </mat-form-field>
+
+        <mat-form-field>
+          <mat-label>Storage</mat-label>
+          <input matInput
+          title="desktop-storage"
+          id="desktopStorage"
+          formControlName="desktopStorage"
+          placeholder="Enter Desktop Storage"
           >
         </mat-form-field>
 
@@ -29,34 +77,33 @@
         
         <mat-form-field>
           <mat-label>Location</mat-label>
-          <mat-select>
-            <mat-option value="desktop">1NK Center</mat-option>
-            <mat-option value="desktop">New Office</mat-option>
-            <mat-option value="desktop">Warehouse</mat-option>
+          <mat-select id="desktopLocation" formControlName="desktopLocation">
+            <mat-option value="1NK Center">1NK Center</mat-option>
+            <mat-option value="New Office">New Office</mat-option>
+            <mat-option value="Warehouse">Warehouse</mat-option>
           </mat-select>
         </mat-form-field>
-      
+
         <mat-form-field>
           <mat-label>Assigned Personnel</mat-label>
-          <mat-select id="assignedTo" formControlName="assignedTo">
+          <mat-select id="desktopAssignedTo" formControlName="desktopAssignedTo">
             <mat-option *ngFor="let employee of employees" [value]="employee._id">
               {{ employee.employeeName }}
             </mat-option>
           </mat-select>
         </mat-form-field>
-
+        
         <mat-form-field>
           <mat-label>Condition</mat-label>
-          <mat-select id="desktopCondition" formControlName="desktop" >
+          <mat-select id="desktopCondition" formControlName="desktopCondition" >
             <mat-option value="Brand New">Brand New</mat-option>
             <mat-option value="Used">Used</mat-option>
             <mat-option value="Unavailable">Unavailable</mat-option>
           </mat-select>
         </mat-form-field>
-
-
+        
       </div>
-
+            
       <div class="button-group">
         <button type="button" class="cancel-btn" (click)="closeModal()">
           Cancel
@@ -66,4 +113,3 @@
     </form>
   </div>
 </div>
-
