--- a/src/app/core/updateemp/updateemp.component.css
+++ b/src/app/core/updateemp/updateemp.component.css
@@ -17,7 +17,8 @@
   border-radius: 10px;
   padding: 30px;
   max-width: 900px;
-  width: 90%;
+  width: 40%;
+  height: 32%;
   position: relative;
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
   animation: fadeIn 0.3s ease-out;
@@ -41,6 +42,7 @@ h2 {
   color: #333;
   text-align: center;
   margin-bottom: 20px;
+ 
 }
 
 /* Form Styles */
