--- a/src/app/core/updateemp/updateemp.component.html
+++ b/src/app/core/updateemp/updateemp.component.html
@@ -6,6 +6,7 @@
     </h2>
 
     <form [formGroup]="editEmployeeForm" (ngSubmit)="onSubmit()">
+      <div class="form-grid">
       <mat-form-field>
         <mat-label>Employee Name</mat-label>
         <input matInput formControlName="employeeName" placeholder="Enter Employee Name" />
@@ -17,11 +18,7 @@
         <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
         <mat-datepicker #picker></mat-datepicker>
       </mat-form-field>
-    
-      <mat-form-field>
-        <mat-label>Employment Period</mat-label>
-        <input matInput formControlName="employmentPeriod" placeholder="Enter Employment Period" />
-      </mat-form-field>
+    </div>
     
       <div class="button-group">
         <button type="button" class="cancel-btn" (click)="closeModal()">Cancel</button>
