--- a/src/app/core/updates/updates.component.html
+++ b/src/app/core/updates/updates.component.html
@@ -57,7 +57,7 @@
         </mat-form-field>
 
         <mat-form-field>
-          <mat-label>laptopAssignedTo To</mat-label>
+          <mat-label>Assigned To</mat-label>
           <mat-select id="laptopAssignedTo" formControlName="laptopAssignedTo" (selectionChange)="onAssignedChange($event)">
             <mat-option *ngFor="let employee of employees" [value]="employee._id">
               {{ employee.employeeName }}
