--- a/src/app/features/desktop/desktop.component.html
+++ b/src/app/features/desktop/desktop.component.html
@@ -1,4 +1,4 @@
-<main id="main-content">
+<main id="main-content"> 
   <section class="table-add-desktop">
     <div class="parent-container">
       <div class="dashboard-card">
@@ -7,6 +7,7 @@
             <mat-icon aria-hidden="false" aria-label="Example home icon" fontIcon="add_circle"></mat-icon>
             <p>Add New Desktop</p>
           </button>
+
           <div class="search-container">
             <input matInput type="text" placeholder="Search..." class="search-input" [(ngModel)]="searchKeyword" />
             <button class="search-btn" (click)="onSearch()">
@@ -15,10 +16,14 @@
             </button>
           </div>
         </div>
+
         <div class="table-container">
           <table mat-table class="mat-elevation-z8" [dataSource]="desktops">
+            <ng-container matColumnDef="desktopName">
+              <th mat-header-cell *matHeaderCellDef>Desktop Name</th>
+              <td mat-cell *matCellDef="let desktop">{{ desktop.desktopName }}</td>
+            </ng-container>
 
-            <!-- Serial Number -->
             <ng-container matColumnDef="desktopSerialNumber">
               <th mat-header-cell *matHeaderCellDef>Serial Number</th>
               <td mat-cell *matCellDef="let desktop">
@@ -26,15 +31,41 @@
               </td>
             </ng-container>
 
-            <!-- Purchase Date -->
-            <ng-container matColumnDef="desktopPurchaseDate">
-              <th mat-header-cell *matHeaderCellDef>Purchase Date</th>
+            <ng-container matColumnDef="desktopModel">
+              <th mat-header-cell *matHeaderCellDef>Model</th>
               <td mat-cell *matCellDef="let desktop">
-                {{ desktop.desktopPurchaseDate | date:'MM/dd/yyyy' }}
+                {{ desktop.desktopModel }}
               </td>
             </ng-container>
 
-            <!-- Location -->
+            <ng-container matColumnDef="desktopProcessor">
+              <th mat-header-cell *matHeaderCellDef>Processor</th>
+              <td mat-cell *matCellDef="let desktop">
+                {{ desktop.desktopProcessor }}
+              </td>
+            </ng-container>
+
+            <ng-container matColumnDef="desktopRam">
+              <th mat-header-cell *matHeaderCellDef>RAM</th>
+              <td mat-cell *matCellDef="let desktop">
+                {{ desktop.desktopRam }}
+              </td>
+            </ng-container>
+
+            <ng-container matColumnDef="desktopStorage">
+              <th mat-header-cell *matHeaderCellDef>Storage</th>
+              <td mat-cell *matCellDef="let desktop">
+                {{ desktop.desktopStorage }}
+              </td>
+            </ng-container>
+
+            <ng-container matColumnDef="desktopPurchaseDate">
+              <th mat-header-cell *matHeaderCellDef>Purchased Date</th>
+              <td mat-cell *matCellDef="let desktop">
+                {{ desktop.desktopPurchaseDate | date: 'MMM d, y' }}
+              </td>
+            </ng-container>
+
             <ng-container matColumnDef="desktopLocation">
               <th mat-header-cell *matHeaderCellDef>Location</th>
               <td mat-cell *matCellDef="let desktop">
@@ -42,15 +73,13 @@
               </td>
             </ng-container>
 
-            <!-- Assigned Personnel -->
-            <ng-container matColumnDef="desktopassignedTo">
-              <th mat-header-cell *matHeaderCellDef>Assigned Personnel</th>
+            <ng-container matColumnDef="desktopAssignedTo">
+              <th mat-header-cell *matHeaderCellDef>Assigned To</th>
               <td mat-cell *matCellDef="let desktop">
-                {{ desktop.desktopassignedTo }}
+                {{ getEmployeeName(desktop.desktopAssignedTo) }}
               </td>
             </ng-container>
 
-            <!-- Condition -->
             <ng-container matColumnDef="desktopCondition">
               <th mat-header-cell *matHeaderCellDef>Condition</th>
               <td mat-cell *matCellDef="let desktop">
@@ -60,12 +89,15 @@
 
             <ng-container matColumnDef="actions">
               <th mat-header-cell *matHeaderCellDef>Actions</th>
-              <td mat-cell *matCellDef="let desktop">
-                <button mat-button color="primary" (click)="openEditModal(desktop)">
-                  Edit
+              <td mat-cell *matCellDef="let desktop" class="actionbtn">
+                <button class="actionbtn" mat-button color="primary" (click)="openModalinfo(desktop)">
+                  <mat-icon class="custom-info-icon">info</mat-icon>
                 </button>
-                <button mat-button color="primary" (click)="openDeleteModal(desktop)">
-                  Delete
+                <button class="actionbtn" mat-button color="primary" (click)="openEditModal(desktop)">
+                  <mat-icon class="material-symbols-outlined">edit</mat-icon>
+                </button>
+                <button class="actionbtn" mat-button color="primary" (click)="openDeleteModal(desktop)">
+                  <mat-icon class="material-symbols-outlined">delete</mat-icon>
                 </button>
               </td>
             </ng-container>
@@ -73,13 +105,28 @@
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
           </table>
+
+          <mat-paginator
+            [length]="totalRecords"
+            [pageSize]="pageSize"
+            [pageSizeOptions]="[5, 10, 25, 100]"
+            (page)="onPageChange($event)">
+          </mat-paginator>
         </div>
       </div>
     </div>
   </section>
 
-  <app-modal-desktop *ngIf="isModalOpen" (closeModalEvent)="closeModal()"></app-modal-desktop>
-  <app-updates *ngIf="isEditModalOpen" (closeModalEvent)="closeEditModal()"></app-updates>
-  <app-delete *ngIf="isDeleteModalOpen" (closeModalEvent)="closeDeleteModal()"></app-delete>
-
+  <app-modal *ngIf="isModalOpen" (closeModalEvent)="closeModal()"></app-modal>
+  <app-modalinfo
+    *ngIf="isModalinfoOpen"
+    [selectedDesktop]="selectedDesktop"
+    (closeModalEvent)="closeModalinfo()">
+  </app-modalinfo>
+  <app-updates-desktop *ngIf="isEditModalOpen" [selectedDesktop]="selectedDesktop" (refreshTableEvent)="getDesktops()"
+    (closeModalEvent)="closeEditModal()">
+  </app-updates-desktop>
+  <app-delete-desktop *ngIf="isDeleteModalOpen" [selectedDesktop]="selectedDesktop" (refreshTableEvent)="getDesktops()"
+    (closeModalEvent)="closeDeleteModal()">
+  </app-delete-desktop>
 </main>
