--- a/src/app/core/updateemp/updateemp.component.html
+++ b/src/app/core/updateemp/updateemp.component.html
@@ -21,8 +21,8 @@
     </div>
     
       <div class="button-group">
-        <button type="button" class="cancel-btn" (click)="closeModal()">Cancel</button>
-        <button type="submit" [disabled]="editEmployeeForm.invalid">Update</button>
+        <button class="btncncl" type="button" class="cancel-btn" (click)="closeModal()">Cancel</button>
+        <button class="btnupdt" type="submit" [disabled]="editEmployeeForm.invalid">Update</button>
       </div>
     </form>
   </div>
