--- a/src/app/core/modalinfo_laptop/modalinfo.component.css
+++ b/src/app/core/modalinfo_laptop/modalinfo.component.css
@@ -184,6 +184,7 @@
   border-radius: 8px;
 }
 
+
 table {
   width: 100%;
   border-collapse: collapse;
@@ -194,8 +195,17 @@ table {
 
 th,
 td {
+  padding: 10px;
   text-align: center;
-  padding: 12px 16px;
+  border-bottom: 1px solid #0f0f0f;
+  border-top: 1px solid rgb(145, 145, 145);
+  border-left: 1px solid rgb(145, 145, 145);
+}
+
+th,
+td {
+  text-align: center;
+  padding: 10px 10px;
   border-bottom: 1px solid #ddd;
 }
 
